shopkart/manifests/base/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: shopkart
  labels:
    app.kubernetes.io/part-of: shopkart
